--- a/simulation.html
+++ b/simulation.html
@@ -97,7 +97,7 @@
                         <br>
                         <br>
                         <br>
-                        <h2 class="title">COVID-19 Simulation</h2>
+                        <h2 class="title">COVID-19 Simulation Test</h2>
                         <p></p>
                     </div> <!-- section title -->
                 </div>
