--- a/simulation.html
+++ b/simulation.html
@@ -67,21 +67,7 @@
         </div> <!-- navigation -->
 
        
-    </div> <!-- container -->
-    <div class="header-social">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="header-social-icon">
-                        <ul>
-                            <li><a href="https://devpost.com/software/kidsagainstcovid"><i class="lni-code-alt"></i></a></li>
-                            <li><a href="https://github.com/catrionachan/KidsAgainstCovid"><i class="lni-github-original"></i></a></li>
-                        </ul>
-                    </div> <!-- header social -->
-                </div>
-            </div> <!-- row -->
-        </div> <!-- container -->
-    </div> <!-- header social -->
+  
 </div> <!-- header content -->
 </header>
 
@@ -97,7 +83,7 @@
                         <br>
                         <br>
                         <br>
-                        <h2 class="title">COVID-19 Simulation Test</h2>
+                        <h2 class="title">COVID-19 Simulation</h2>
                         <p></p>
                     </div> <!-- section title -->
                 </div>
@@ -225,5 +211,19 @@
 
     <!--====== ABOUT PART ENDS ======-->
 
+    <section id="service" class="services-area gray-bg pt-125 pb-130">
+        <div class="container">
+
+            <div class="row justify-content-center">
+                <div class="col-md-12">
+                    <div class="single-service text-center mt-30"></div>
+
+                    </div> <!-- single service -->
+                </div>
+                </div>
+            </section>
+
 </body>
+
+
 </html>
