--- a/simulation.html
+++ b/simulation.html
@@ -210,18 +210,11 @@
     </section>
 
     <!--====== ABOUT PART ENDS ======-->
-
-    <section id="service" class="services-area gray-bg pt-125 pb-130">
-        <div class="container">
-
-            <div class="row justify-content-center">
-                <div class="col-md-12">
-                    <div class="single-service text-center mt-30"></div>
-
-                    </div> <!-- single service -->
-                </div>
-                </div>
-            </section>
+    <div class="simulation">
+        <svg width="800" height="500">
+            <rect width="800" height="500" style="fill:white;stroke-width:1;stroke:grey" />
+          </svg>
+    </div>
 
 </body>
 
