--- a/simulation.html
+++ b/simulation.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="index.css">
     <script src="draw.js"></script>
+    <script src="grid.js"></script>
     <script src="simulation.js"></script>
     <title>KidsAgainstCovid</title>
 
