--- a/about.html
+++ b/about.html
@@ -103,7 +103,7 @@
                             <h4 class="sub-title">A group of 4 working to slow the rate of</h4>
                             <h1 class="title">COVID-19!</h1>
                             <p>Learn about us on our Devpost!</p>
-                            <a class="main-btn" href="#work">Read More</a>
+                            <a class="main-btn" href="https://devpost.com/software/kidsagainstcovid">Read More</a>
                         </div> <!-- header content right -->
                     </div>
                     <div class="col-lg-6 offset-xl-1">
