--- a/tips.html
+++ b/tips.html
@@ -169,7 +169,13 @@
             </div> <!-- row -->
         </div> <!-- container -->
     </section>
-
+     </div> <!-- header shape -->
+            <div class="container">
+                <p>More Recourses!</p>
+                            <a class="main-btn" href="https://www.toronto.ca/home/covid-19/vid">City of Toronto</a>
+                        </div> <!-- header content right -->
+                    <a class="main-btn" href="https://www.who.int/health-topics/coronavirus#tab=tab_1">WHO</a>
+                    </div>
     <!--====== SERVICES PART ENDS ======-->
 
 </body>
