--- a/tips.html
+++ b/tips.html
@@ -171,10 +171,14 @@
     </section>
      </div> <!-- header shape -->
             <div class="row">
-                <p>More Recourses!</p>           
-                <a class="main-btn" href="https://www.toronto.ca/home/covid-19/vid">City of Toronto</a>         
-                <a class="main-btn" href="https://www.who.int/health-topics/coronavirus#tab=tab_1">WHO</a>
-                        </div> <!-- header content right -->
+                <p>More Recourses!</p>      
+                </div>
+                <a class="main-btn" href="https://www.toronto.ca/home/covid-19/vid">City of Toronto</a>  
+                    <div class="divider"/>
+                        <a class="main-btn" href="https://www.who.int/health-topics/coronavirus#tab=tab_1">WHO</a>
+                            <div class="divider"/>
+                                <a class="main-btn" href="https://kidshelpphone.ca/">Kids Help Phone</a>
+            </div> <!-- header content right -->
                     
                     </div>
     <!--====== SERVICES PART ENDS ======-->
