--- a/tips.html
+++ b/tips.html
@@ -170,18 +170,16 @@
         </div> <!-- container -->
     </section>
      </div> <!-- header shape -->
-            <div class="row">
-                <div></div>
-                <center>
+           <div class="row justify-content-center">
                 <p>More Recourses!</p>      
                 </div>
                 <a class="main-btn" href="https://www.toronto.ca/home/covid-19/vid">City of Toronto</a>  
-                    <div class="divider"/>
-                    <a class="main-btn" href="https://www.who.int/health-topics/coronavirus#tab=tab_1">WHO</a>    
-                    <a class="main-btn" href="https://kidshelpphone.ca/">Kids Help Phone</a>
-            </div> <!-- header content right -->
-                    
                     </div>
+                    <a class="main-btn" href="https://www.who.int/health-topics/coronavirus#tab=tab_1">WHO</a>    
+                        </div>                   
+                        <a class="main-btn" href="https://kidshelpphone.ca/">Kids Help Phone</a>
+            </div> <!-- header content right -->
+     </div>
     <!--====== SERVICES PART ENDS ======-->
 
 </body>
