--- a/tips.html
+++ b/tips.html
@@ -171,15 +171,16 @@
     </section>
      </div> <!-- header shape -->
            <div class="row justify-content-center">
-                <p>More Recourses!</p>      
-                </div>
-                <a class="main-btn" href="https://www.toronto.ca/home/covid-19/vid">City of Toronto</a>  
-                    </div>
-                    <a class="main-btn" href="https://www.who.int/health-topics/coronavirus#tab=tab_1">WHO</a>    
-                        </div>                   
+            <div class="col-lg-4 col-md-6 col-sm-8">
+                    <div class="single-service text-center mt-30">
+                      <h2 class="title">More Recourses!</h2>
+                      </div>
+                        <a class="main-btn" href="https://www.toronto.ca/home/covid-19/vid">City of Toronto</a> 
+                        <a class="main-btn" href="https://www.who.int/health-topics/coronavirus#tab=tab_1">WHO</a>   
                         <a class="main-btn" href="https://kidshelpphone.ca/">Kids Help Phone</a>
             </div> <!-- header content right -->
      </div>
+    </div>
     <!--====== SERVICES PART ENDS ======-->
 
 </body>
