--- a/tips.html
+++ b/tips.html
@@ -175,9 +175,11 @@
                     <div class="single-service text-center mt-30">
                       <h2 class="title">More Recourses!</h2>
                       </div>
+                       <div id="outer">
                         <a class="main-btn" href="https://www.toronto.ca/home/covid-19/vid">City of Toronto</a> 
                         <a class="main-btn" href="https://www.who.int/health-topics/coronavirus#tab=tab_1">WHO</a>   
                         <a class="main-btn" href="https://kidshelpphone.ca/">Kids Help Phone</a>
+                      </div>
             </div> <!-- header content right -->
      </div>
     </div>
