--- a/tips.html
+++ b/tips.html
@@ -171,7 +171,7 @@
     </section>
      </div> <!-- header shape -->
            <div class="row justify-content-center">
-            <div class="col-lg-4 col-md-6 col-sm-8">
+            <div class="col-lg-12">
                     <div class="single-service text-center mt-30">
                       <h2 class="title">More Recourses!</h2>
                       </div>
